Bugfixes & Small Improvements
+ On Windows & UNIX, the editor didn't account for scrollbar width, causing some overflow on some pages. Added in scrollbar-width to account for these differences.

+ Should fix an android locked doc bug

+ Fixes #140 thanks @PreciselyPixels!

+ Should fix #137  and all its sub-issues for good this time I think.  Made a few changes to the way markdown is parsed, and how we watch for exceptions. Should work cross-compatibly. Thanks @arturolinares for reporting these in!

--- a/source/css/docs.css
+++ b/source/css/docs.css
@@ -3570,7 +3570,6 @@ body.bubble.locked-doc #desktopToolbar::before {
 
 body.bubble.locked-doc #panel-button-doctools {
     opacity: 0;
-    pointer-events: none !important;
 }
 
 body.bubble #blankEditor .quick-offline p {
